<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Automation</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="controls_title">Controls</string>
    <string name="CCTVText">CCTV</string>
    <string name="sum_CCTVText">CCTV feed</string>
    <string name="GateText">Gate</string>
    <string name="sum_GateText">Open/Close Gate</string>
    <string name="GardenText">Garden watering</string>
    <string name="sum_GardenText">On/Off Garden water sprinkler</string>
    <string name="MotorText">Motor</string>
    <string name="sum_MotorText">On/Off Motor</string>
   
    
    
    <string name="geyser_title">Geyser control</string>
    <string name="sum_geyser_title">Geyser thermostat control</string>
    <string name="geyser_dialog_title">Geyser thermostat control</string>
    <string name="water_level_text">Water tank level</string>
    <string name="sum_water_level_text">Water tank level display</string>
    <string name="appliances_title">Appliances</string>
    <string name="Light1">Light 1</string>
    <string name="sum_light1">Light 1</string>
    <string name="fan1">Fan 1</string>
    <string name="sum_fan1">Fan 1</string>
    <string name="action_search">Search for bluetooth hub</string>
	<string name="temperature_textview_title">Temperature</string>
    <string-array name="geyser_list_preference_array">
        <item>Sleep</item>
        <item>Luke warm</item>
        <item>Level 3</item>
        <item>Warm</item>
        <item>Level 5</item>
        <item>Hot</item>
        <item>Very Hot</item>
    </string-array>

    <string-array name="geyservalues_list_preference_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="title_activity_bluetooth_pair">Find bluetooth hub</string>
    <string name="DiscoverButtonText">Discover</string>
    <string name="sum_automatic">Automatically manage</string>
    <string name="automatic">Auto</string>
	
	<string name="room1_title">Room 1</string>
	<string name="room2_title">Room 2</string>
	<string name="geyser_default">Off</string>
	
	<string name="fragment_enable_preference">fragment_enable_preference</string>
	<string name="gate_preference">gate_preference</string>
</resources>
